[package]
name = "webfinger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.4", features = ["derive"] }
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }