[package]
name = "webfinger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["query"] }
clap = { version = "4.5.4", features = ["derive"] }
http = "1.1.0"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", default-features = false, features = ["util"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
# FIXME: move tower here?